--- a/index.html
+++ b/index.html
@@ -14,5 +14,17 @@
   </head>
   <body>
     <h1>World of Weens</h1>
+
+    <footer>
+      This site was coded by
+      <a
+        href="https://www.linkedin.com/in/kelly-glass-9b86a7284/"
+        target="_blank"
+        >Kelly Glass.</a
+      >
+      Available on
+      <a href="https://github.com/kellyglass10" target="_blank">Github</a> and
+      hosted on Netlify.
+    </footer>
   </body>
 </html>
