--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <title>Dachshund</title>
   </head>
   <body>
-    <h1>World of Weens</h1>
+    <h1>Everything Dachshund</h1>
+    <h2>welcome to the world of the weens</h2>
 
     <footer>
       This site was coded by
