--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/style.css" />
-    <title>Dachshund</title>
+    <title>World of Weens</title>
   </head>
   <body>
-    <h1>Everything Dachshund</h1>
-    <h2>welcome to the world of the weens</h2>
+    <div class="container">
+      <header>
+        <h3>.DACHSHUND.</h3>
+        <h1>Your Next Best Friend</h1>
+        <h2>Welcome to the World of Weens</h2>
+        <a href="#">Learn More</a>
+      </header>
 
-    <footer>
-      This site was coded by
-      <a
-        href="https://www.linkedin.com/in/kelly-glass-9b86a7284/"
-        target="_blank"
-        >Kelly Glass.</a
-      >
-      Available on
-      <a href="https://github.com/kellyglass10" target="_blank">Github</a> and
-      hosted on Netlify.
-    </footer>
+      <footer>
+        This site was coded by
+        <a
+          href="https://www.linkedin.com/in/kelly-glass-9b86a7284/"
+          target="_blank"
+          >Kelly Glass.</a
+        >
+        Available on
+        <a href="https://github.com/kellyglass10" target="_blank">Github</a> and
+        hosted on Netlify.
+      </footer>
+    </div>
   </body>
 </html>
