main:completed-main-section
made responsive

--- a/index.html
+++ b/index.html
@@ -20,67 +20,108 @@
         <h2>Welcome to the World of Weens</h2>
         <a href="#">Learn More</a>
       </header>
+      <main>
+        <section class="grid grid-2-columns">
+          <div>
+            <img
+              src="images/dog-chair.jpg"
+              alt="group dachshund photo"
+              class="main-photo"
+            />
+          </div>
+          <div>
+            <h2>Why a Dachshund?</h2>
+            <h3>About the Breed...</h3>
+            <p>
+              Dachshunds have a rich history dating back to 15th century Europe.
+              Originally bred in Germany, their name literally translates to
+              "badger dog", a nod to their primary role as hunters. Their
+              elongated bodies and short legs were specially tailored for
+              navigating through tight underground tunnels. Over time,
+              Dachshunds have evolved into beloved companions known for their
+              distinctive looks, personality, and stubborness.
+            </p>
+            <p>
+              They are loyal almost to fault, extremely curious, very lazy (yet
+              extremely energetic), and are absolute comedians. If they have any
+              cons, it would be related to stubborness. They have selective
+              hearing and genuinely do what they want, when they want.
+              Also...good luck getting them to use the bathroom outside when its
+              raining. You'll both be wet by the end of that.
+            </p>
+            <p>
+              Overall, they are incredible dogs. You will be followed everywhere
+              you go, but your life will be filled with love and laughter with a
+              ween around.
+            </p>
+          </div>
+        </section>
+      </main>
+
+      <footer>
+        <section class="grid grid-3-columns">
+          <div>
+            <h3>More Dachshund Info</h3>
+            <ul>
+              <li>
+                <a
+                  href="https://www.dachshund-ivdd.uk/what-is-ivdd/"
+                  target="_blank"
+                  >IVDD in Dachshunds</a
+                >
+              </li>
+
+              <li>
+                <a
+                  href="https://www.alphapaw.com/products/dachramp?nbt=nb%3Aadwords%3Ag%3A1755604032%3A68976727176%3A588449969661&nb_adtype=&nb_kwd=dachshund%20ramp&nb_ti=kwd-297303324625&nb_mi=&nb_pc=&nb_pi=&nb_ppi=&nb_placement=&nb_si={sourceid}&nb_li_ms=&nb_lp_ms=&nb_fii=&nb_ap=&nb_mt=b&tw_source=google&tw_adid=588449969661&tw_campaign=1755604032&gad_source=1&gclid=CjwKCAjw48-vBhBbEiwAzqrZVDJZ2iw3tV7UHAS-sS_cU8jkRg9y-9pEUdtMuXNeGDyjNhL3dxZvKBoCO8gQAvD_BwE"
+                  target="_blank"
+                  >#1 Vet Recommended Dachshund Ramp</a
+                >
+              </li>
+
+              <li>
+                <a href="https://www.thefarmersdog.com/about-us" target="_blank"
+                  >Farmer's Dog: A Healthier Food Choice</a
+                >
+              </li>
+
+              <li>
+                <a href="https://beangoods.com/" target="_blank"
+                  >Swag for your Ween...and you!</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About Me</h3>
+            <p>
+              Hi! My name is Kelly. Growing up, I had 2 dachshunds and fell in
+              love with them. I now have a miniature long-haired ween named
+              Moose and feel passionate about spreading info on everything
+              dachsund! I created this website as a resource for you to learn
+              how to best care for your next best friend 🐶
+            </p>
+          </div>
+          <div>
+            <h3>About This Website</h3>
+            <p>
+              This site was coded by
+              <a
+                href="https://www.linkedin.com/in/kelly-glass-9b86a7284/"
+                target="_blank"
+                >Kelly Glass.</a
+              >
+              <br />
+              Available on
+              <a href="https://github.com/kellyglass10" target="_blank"
+                >Github</a
+              >
+              and hosted on
+              <a href="https://www.netlify.com/" target="_blank">Netlify.</a>
+            </p>
+          </div>
+        </section>
+      </footer>
     </div>
-
-    <footer>
-      <section class="grid">
-        <div>
-          <h3>More Dachshund Info</h3>
-          <ul>
-            <li>
-              <a
-                href="https://www.dachshund-ivdd.uk/what-is-ivdd/"
-                target="_blank"
-                >IVDD in Dachshunds</a
-              >
-            </li>
-
-            <li>
-              <a
-                href="https://www.alphapaw.com/products/dachramp?nbt=nb%3Aadwords%3Ag%3A1755604032%3A68976727176%3A588449969661&nb_adtype=&nb_kwd=dachshund%20ramp&nb_ti=kwd-297303324625&nb_mi=&nb_pc=&nb_pi=&nb_ppi=&nb_placement=&nb_si={sourceid}&nb_li_ms=&nb_lp_ms=&nb_fii=&nb_ap=&nb_mt=b&tw_source=google&tw_adid=588449969661&tw_campaign=1755604032&gad_source=1&gclid=CjwKCAjw48-vBhBbEiwAzqrZVDJZ2iw3tV7UHAS-sS_cU8jkRg9y-9pEUdtMuXNeGDyjNhL3dxZvKBoCO8gQAvD_BwE"
-                target="_blank"
-                >#1 Vet Recommended Dachshund Ramp</a
-              >
-            </li>
-
-            <li>
-              <a href="https://www.thefarmersdog.com/about-us" target="_blank"
-                >Farmer's Dog: A Healthier Food Choice</a
-              >
-            </li>
-
-            <li>
-              <a href="https://beangoods.com/" target="_blank"
-                >Swag for your Ween...and you!</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3>About Me</h3>
-          <p>
-            Hi! My name is Kelly. Growing up, I had 2 dachshunds and fell in
-            love with them. I now have a miniature long-haired ween named Moose
-            and feel passionate about spreading info on everything dachsund! I
-            created this website as a resource for you to learn how to best care
-            for your next best friend 🐶
-          </p>
-        </div>
-        <div>
-          <h3>About This Website</h3>
-          <p>
-            This site was coded by
-            <a
-              href="https://www.linkedin.com/in/kelly-glass-9b86a7284/"
-              target="_blank"
-              >Kelly Glass.</a
-            >
-            Available on
-            <a href="https://github.com/kellyglass10" target="_blank">Github</a>
-            and hosted on Netlify.
-          </p>
-        </div>
-      </section>
-    </footer>
   </body>
 </html>
