main: added-three-rescue-cards

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="grid grid-2-columns">
           <div>
             <img
-              src="images/dog-chair.jpg"
+              src="images/main.jpg"
               alt="group dachshund photo"
               class="main-photo"
             />
@@ -56,10 +56,112 @@
             </p>
           </div>
         </section>
+        <section class="rescue-background-section">
+          <h2 class="text-center">How You Can Help</h2>
+          <h3 class="text-center">Rescue, Volunteer, Foster</h3>
+
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/rescues/DRLA.png"
+                  class="drla-rescue text-center"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Dachshund Rescue of Los Angeles</h4>
+                <p>
+                  Aims to reduce the number of dachshunds being euthanized in
+                  local shelters, as well as providing educated and committed
+                  homes for homeless dogs
+                </p>
+                <h5>Address</h5>
+                <p>10626 Ohio Ave</p>
+                <p>Los Angeles, CA 90024</p>
+                <h5>What I like about this shelter</h5>
+                <p>
+                  All dogs are placed with fosters to ensure easy transition to
+                  forever home, no dogs are in a shelter setting
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.dachshundrescueoflosangeles.com/"
+                  target="_blank"
+                  class="button"
+                  >Visit Website</a
+                >
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/rescues/dach. relief.png"
+                  class="dach-relief text-center"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Southern California Dachshund Rescue</h4>
+                <p>
+                  Non-profit corp that has been rescuing dachshunds around
+                  southern, central, and northern California since 1994. Have
+                  rescued 5,000 dachshunds and counting!
+                </p>
+                <h5>Address</h5>
+                <p>P.O Box 2634</p>
+                <p>La Habra, CA 90631</p>
+                <h5>What I like about this shelter</h5>
+                <p>
+                  Serves the entire California area and requires home visits to
+                  ensure the dogs are going to quality homes
+                </p>
+              </div>
+              <div class="card-footer">
+                <a href="https://scdr.org/" target="_blank" class="button"
+                  >Visit Website</a
+                >
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/rescues/dach:friends.png"
+                  class="dach-friends text-center"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Dachshund & Friends Rescue</h4>
+                <p>
+                  Established in 2017, they are committed to securing permanent
+                  homes along with foster homes for dachshunds (as well as other
+                  breeds) in Southern California
+                </p>
+                <h5>Address</h5>
+                <p>Located in Burbank, CA</p>
+                <p>Please contact for address</p>
+                <h5>What I like about this shelter</h5>
+                <p>
+                  Dachshund & Friends routinely organize public adoption events
+                  throughout Southern California
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.dachshundsandfriends.org/"
+                  target="_blank"
+                  class="button"
+                  >Visit Website</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer>
-        <section class="grid grid-3-columns">
+        <section class="grid grid-3-columns-footer">
           <div>
             <h3>More Dachshund Info</h3>
             <ul>
