added-link-to-learnmore-button
akc website for dachshunds

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <h3>.DACHSHUND.</h3>
         <h1>Your Next Best Friend</h1>
         <h2>Welcome to the World of Weens</h2>
-        <a href="#">Learn More</a>
+        <a href="https://www.akc.org/dog-breeds/dachshund/" target="_blank"
+          >Learn More</a
+        >
       </header>
       <main>
         <section class="grid grid-2-columns">
